/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Mauricio Rios
 */
package ucf.assignments;

public class Item {
    //initialize boolean completion
    //initialize string description
    //initialize string due date

    //declare constructor with completion, description, and due date

    //generate getters and setters
    //generate toString()
}