/*
 *  UCF COP3330 Summer 2021 Assignment 4 Solution
 *  Copyright 2021 Mauricio Rios
 */
package ucf.assignments;

public class List {
    //initialize ArrayList<Item>

    //declare constructor with ArrayList<Item>

    //generate getters and setter for Item
    //generate toString()

    //public Boolean isCompleted()
        //sort through list
        //look at each item in search of completion of item/task
        //return true if the whole list of items are true
}